--- a/estilo/style.css
+++ b/estilo/style.css
@@ -34,7 +34,7 @@ header {
     top: 0px;
     right: 0px;
     width: 100%;
-    z-index: 1000px;
+    z-index: 1000;
     display: flex;
     align-items: center;
     justify-content: space-between;
